tests/snapshots/render/ruby-rails-ci.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
ruby-rails

No CI pipelines found (looked for .github/workflows/*.yml and .gitlab-ci.yml).
