tests/snapshots/render/ruby-rails-list-all.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
ruby-rails  [Ruby, Rails]

  bundle exec rake import          Import the product catalogue from CSV
  bundle exec rake reports:weekly  Send the weekly sales report
  bundle exec rake db:seed:demo    Seed demo accounts
  bundle exec rake db:reindex      Rebuild the search index
  bundle exec rake data:anonymise  Anonymise customer records for staging
  bin/dev                          Start the Rails app and its dev processes  ∞ long-running
  bin/rails server                 Start the Rails server  ∞ long-running
  bin/rails console                Open the Rails console  ∞ long-running
  bin/rails db:migrate             Apply Rails migrations
  bin/rails db:seed                Seed the database
  bin/rails db:prepare             Create the database and apply migrations
  bin/rails db:reset               Drop and recreate the database  [destructive]
  bin/rails routes                 List Rails routes
  bin/setup                        Set up the app (bin/setup)
  bundle exec rspec                Run RSpec tests
  bundle exec rubocop              Check Ruby source with RuboCop
  bundle exec brakeman -q          Scan the Rails app with Brakeman
