tests/snapshots/render/ruby-rails-support.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
Toolsets this build of rhow has been verified against
  Rust / Cargo  editions 2015-2024
  Go            up to Go 1.26
  .NET          net5.0-net10.0 (net48 and netstandard* recognised but not version-checked)
  Python        up to Python 3.14 (compound constraints like `>=3.9,<4` are left unclear)
  Taskfile      schema version 3
  Node.js       up to Node 24
  npm           up to npm 11
  pnpm          up to pnpm 10
  Yarn          up to Yarn 4 (Berry)
  Bun           up to Bun 1
  Ruby          up to Ruby 4.0
  PHP           up to PHP 8.5
  Terraform     up to Terraform 1.13
  OpenTofu      up to OpenTofu 1.10
  Gradle        up to Gradle 9.1
  Bazel         up to Bazel 8.3

Also discovered, with no single version to check
  Make, Just, Docker / Compose, Kubernetes, Pulumi, Ansible, Nx / Turborepo / Rush / moon, Deno,
  Maven, Swift / Xcode, Fastlane, Flutter / Dart, Expo / React Native, Elixir / Mix, Zig, CMake,
  Haskell, Scala / sbt, Clojure, Pants


Detected in ruby-rails
  Ruby  3.2.0  .ruby-version
