tests/snapshots/render/ruby-rails-why-db-reset.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
db:reset  Drop and recreate the database
  command     bin/rails db:reset
  in          .
  project     ruby-rails (.)
  source      inferred from rails conventions
  confidence  low
  risk        destructive
