tests/snapshots/render/ruby-rails-why-import.snap
---
source: tests/render.rs
assertion_line: 33
expression: out
---
import  Import the product catalogue from CSV
  command     bundle exec rake import
  in          .
  project     ruby-rails (.)
  source      declared by the project (rake)
  confidence  exact
  risk        safe
